--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -86,10 +86,10 @@
             </div>
 
             <div class="notification-controls mt-3">
-              <button class="btn btn-primary w-100 mb-2" onclick="requestNotificationPermission()">
+              <button id="activateNotifications" class="btn btn-primary w-100 mb-2" onclick="requestNotificationPermission()">
                 Activar Notificaciones
               </button>
-              <button class="btn btn-success w-100" onclick="saveNotificationPreferences()">
+              <button id="savePreferences" class="btn btn-success w-100" onclick="saveNotificationPreferences()">
                 Guardar Preferencias
               </button>
             </div>
