--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -12,7 +12,7 @@ html, body {
   padding: 0;
   width: 100%; 
   height: 100%;
-  background-color: #0f172a !important;
+  background-color: #feca57 !important;
   overflow: hidden;
 }
 
@@ -181,10 +181,12 @@ html, body {
 /* Modal notificaciones */
 .modal {
     z-index: 9999;
+  overflow: hidden;
+  
 }
 
 .modal-dialog {
-    margin-top: 80px;
+    margin-top: 60px;
 }
 
 .modal-content {
