--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<main class="predictions-content">
+<main class="predictions-content" data-user-id="{{ current_user.id }}">
   <div class="predictions-container">
     <header class="predictions-header">
       <i class="fas fa-shield-alt predictions-icon"></i>
@@ -31,6 +31,6 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 <script src="{{ url_for('static', filename='js/predictions.js') }}"></script>
 {% endblock %}
